--- a/index.html
+++ b/index.html
@@ -1,36 +1,82 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+const buttons = ['red', 'blue', 'green', 'yellow'];
+let gamePattern = [];
+let level = 0;
+let expectedButton = 0;
+let started = false;
+let bgm;
 
-<head>
-  <meta charset="utf-8">
-  <title>Simon</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-</head>
-
-<body>
-  <h1 id="level-title">Press A Key to Start</h1>
-  <div class="container">
-      <div type="button" id="green" class="btn green" style="background-color: green;">
-
-      </div>
-
-      <div type="button" id="red" class="btn red" style="background-color: red;">
-
-      </div>
-      
-      <div type="button" id="yellow" class="btn yellow" style="background-color: yellow;">
-
-      </div>
-      <div type="button" id="blue" class="btn blue" style="background-color: blue;">
-
-      </div>
-      <div id="center-circle"></div>
-  </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="game.js"></script>
-</body>
-
-</html>
+$(document).ready(function() {
+    $('#start-button').click(function() {
+        $(this).animate({
+            height: '-=2px',
+            width: '-=5px'
+        }, 100);
+        setTimeout(function() {
+            $('#start-button').animate({
+                height: '+=2px',
+                width: '+=5px'
+            }, 100)
+        }, 100)
+        if(!started){
+            startGame();
+            $(this).text('RESTART');
+            $(this).css('backgroundColor', 'grey');
+        }
+    });
+    $('.btn').click(function(){
+        let clickedButton = $(this).attr('id');
+        if(started){
+            if(checkInput(clickedButton)) {
+                press(clickedButton);
+            }
+        }
+    })
+    function startGame(){
+        started = true;
+        expectedButton = 0;
+        setTimeout(nextSequence, 1500);
+        console.log(`Game Started !`);
+        $('#level-title').text('Level '+ level);
+    }
+    function endGame(){
+        started = false;
+        level = 0;
+        expectedButton = 0;
+        gamePattern = [];
+        playSound('wrong');
+        $('body').css('backgroundColor', 'red');
+        $('#level-title').text('GAME OVER, RESTART GAME !');
+        setTimeout(function(){
+            $('body').css('backgroundColor', '#011F3F');
+        }, 200);
+        $('#start-button').css('backgroundColor', 'red');
+    }
+    function checkInput(pressedButton){
+        if(pressedButton === gamePattern[expectedButton]){
+            expectedButton++;
+            if(expectedButton == gamePattern.length)
+                startGame();
+            return true;
+        }else
+            endGame();
+        return false;
+    }
+    function press(button) {
+        $('#' + button).addClass('pressed');
+        playSound(button);
+        setTimeout(() => {
+            $('#' + button).removeClass('pressed');
+        }, 100);
+    }
+    function playSound(name) {
+        var audio = new Audio("sounds/" + name + ".mp3");
+        audio.play();
+    }
+    function nextSequence() {
+        level++;
+        var randomNumber = Math.floor(Math.random() * 4);
+        var randomColor = buttons[randomNumber];
+        gamePattern.push(randomColor);
+        press(randomColor);
+    }
+})
