--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
   <h1 id="level-title">START NEW GAME</h1>
   <div class="container">
-      <div type="button" id="green" class="btn green" style="background-color: green;">
+      <div type="button" id="green" class="btn green pointer" style="background-color: green;">
 
       </div>
 
-      <div type="button" id="red" class="btn red" style="background-color: red;">
+      <div type="button" id="red" class="btn red pointer" style="background-color: red;">
 
       </div>
       
-      <div type="button" id="yellow" class="btn yellow" style="background-color: yellow;">
+      <div type="button" id="yellow" class="btn yellow pointer" style="background-color: yellow;">
 
       </div>
-      <div type="button" id="blue" class="btn blue" style="background-color: blue;">
+      <div type="button" id="blue" class="btn blue pointer" style="background-color: blue;">
 
       </div>
       <div id="center-circle"></div>
   </div>
 
   <div class="buttons">
-    <button id="start-button">START</button>
+    <button id="start-button" class="pointer">START</button>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
